--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -38,6 +38,24 @@ layout: default
       </div>
     {% endif %}
 
+    {% if page.cv_pdf %}
+      <div style="margin: 1rem 0;">
+        <a
+          {% if page.cv_pdf contains '://' %}
+            href="{{ page.cv_pdf }}"
+          {% else %}
+            href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url }}"
+          {% endif %}
+          target="_blank"
+          rel="noopener noreferrer"
+          class="btn btn--primary"
+        >
+          <i class="fa-solid fa-file-pdf"></i> Download CV
+        </a>
+      </div>
+    {% endif %}
+
+
     <div class="clearfix">{{ content }}</div>
 
     <!-- News -->
