--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -673,13 +673,13 @@ footer.sticky-bottom {
   }
 
   .col {
-    padding-bottom: 1rem;
+    padding-bottom: 1.5rem;
   }
 
   .grid-sizer,
   .grid-item {
     width: 250px;
-    margin-bottom: 10px;
+    margin-bottom: 1.5rem;
   }
 
   h2.category {
